test-package-compiler/src/snapshots/test_package_compiler__generated_tests__unused_aliases_with_cross_aliasing.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 357
expression: "./cases/unused_aliases_with_cross_aliasing"
---
//// /out/lib/the_package/_gleam_artefacts/dojo.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/dojo.cache_meta
<51 byte binary>

//// /out/lib/the_package/_gleam_artefacts/dojo.erl
-module(dojo).
-compile([no_auto_import, nowarn_unused_vars]).

-export([main/0]).

-spec main() -> integer().
main() ->
    3,
    4.


//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<29 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.erl
-module(one).


//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<29 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.erl
-module(two).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [dojo,
               one,
               two]},
    {registered, []}
]}.



